[package]
name = "mfc-rs"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
linefeed = "0.6"
pest = "2.1"
pest_derive = "2.1"
pest-ast = "0.3"
from-pest = "0.3"
